--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1,6 +1,318 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap');
 
-html, 
+// sass variables
+
+$font-stack:'Raleway', sans-serif;
+$font-small: 15px;
+$font-medium: 20px;
+$font-large: 50px;
+$font-Xlarge: 100px;
+$text-shadow: 0 0 6px #000;
+
+$borderRadius: 3px;
+$box-shadow:
+  0 4px 8px 0 rgba(0, 0, 0, 0.2),
+  0 6px 20px 0 rgba(0, 0, 0, 0.19);
+$box-shadow-inset:
+  inset 0 -0.6em 1em -0.35em 
+  rgba(0,0,0,0.17),
+  inset 0 0.6em 2em -0.3em
+  rgba(255,255,255,0.15),
+  inset 0 0 0em 0.05em 
+  rgba(255,255,255,0.12);
+
+  // $padding5-margin5-border0{
+  // }
+
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: $font-stack;
+  font-size: $font-small; 
+
+  height: 100vh;
+  width: 100vw;
+  padding: 5px;
+  margin: 5px;
+  border: 0;
+  background-size:cover;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, 
+  #a7aaa6 0%, 
+  #6e726d 35%, 
+  #30352e 100%);
+}
+
+//------- body background picture -------
+// background-image:
+// url("https://media.giphy.com/media/RHIKETUlUINYvV7CAO/giphy.gif");
+
+.header {
+  font-size: $font-Xlarge;
+  text-shadow: $text-shadow;
+
+  color: #ccb5c6;
+  padding: 5px;
+  margin: 5px;
+  display: block;
+  text-align: center;
+}
+
+// ----- with box-shadow and hover lighter -----
+.nav-horizontal-div {
+  text-align: center;
+  padding: 5px;
+  margin: 5px;
+    button {
+      background-color: #5dacc0;
+      font-size: $font-small; 
+      color: rgb(70, 70, 70);
+      box-sizing: border-box;
+      padding: 10px;
+      margin: 8px;
+      border: 0;
+      border-radius: $borderRadius;
+      box-shadow: $box-shadow;
+      cursor: pointer;
+    }    
+    button:hover {
+      background-color: #d4a0d1;
+      color: rgb(241, 237, 237);
+    }
+}
+
+// ----- with inset shading & hover darker -----
+
+.nav-and-text-div { 
+  padding: 20px;
+  margin: 20px;
+  width: auto;
+  display: flex;
+    .text-div {
+      padding: 20px;
+      margin: 20px;
+      width: -webkit-fill-available;
+      display: flex;
+      border: black 1px;
+      border-style: solid;
+    }
+ }
+
+.nav-vertical-div {
+  text-align: center;
+  padding: 5px;
+  margin: 5px;
+  width: 300px;
+  border: black 1px;
+  border-style: solid;
+    .nav-button-div {
+      text-align: center;
+      padding: 5px;
+      margin: 20px;
+      border: black 1px;
+      border-style: solid;
+        ul {
+          font-size: $font-small; 
+          font-weight: 100;
+          background-color: #b3dde7;
+          padding: 10px;
+          margin: 10px;
+          border: 0;
+          cursor: pointer;
+          box-sizing: border-box;
+          box-shadow: $box-shadow-inset;
+          border-radius: $borderRadius;
+        }    
+        ul:hover {
+          color: azure;
+          background-color: #3e717e;
+        }
+    }
+  }
+
+
+.drop-down-menu {
+  font-size: $font-small; 
+  text-align: center;
+  padding: 5px;
+  margin: 5px;
+}
+    select, button {
+      cursor: pointer;
+      font-weight: 100;
+      background-color: #b3dde7;
+      padding: 10px;
+      margin: 10px;
+      border: 0;
+      box-sizing: border-box;
+      border-radius: $borderRadius;
+      box-shadow: $box-shadow-inset;
+    }
+    select:hover, button:hover {
+      background-color: #3e717e;
+      color: azure;
+    }
+
+
+
+.polaroid-wrapper {
+  display: flex;
+  flex-wrap: wrap;  
+  justify-content: center;
+  border: 0;
+  padding: 5px;
+  margin: 5px;
+
+}
+ .each-polaroid {
+  justify-content: center;
+  border: 10px;
+  padding: 10px;
+  margin: 20px;
+  background-color: #9dafa1; 
+  box-shadow: $box-shadow-inset;
+  border-radius: $borderRadius;
+}
+
+.polaroid-image-and-title {
+
+  position: relative;
+  background-size:cover;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: auto;
+  padding: 2px;
+  margin: 2px;
+  border: 2px;  
+    img {
+      /* display: flex; */
+      align-items: center;
+      justify-content: space-around;
+      width: 450px;
+      border: 5px;
+      padding: 5px;
+      margin: 5px;
+      border-radius: 2px;
+  }   
+}
+
+
+
+.polaroid-title-div {
+  position: absolute;
+  top: 20%;
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+ 
+}
+.polaroid-title {
+  font-size: $font-large; 
+  color: aliceblue;
+  border: 0;
+  margin: 5px;
+  display: block;
+  padding: 20px;
+  height: auto;
+  text-align: center;
+  text-shadow: $text-shadow;
+}
+
+ .polaroid-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+ .polaroid-detail {
+  font-weight: bold;
+  font-size: $font-small; 
+  margin: 0.5rem;
+
+}
+h4 {
+  font-size: $font-small; 
+  border: 0;
+  padding: 5px;
+  margin: 5px;
+  display: block;
+  align-items: center;
+  height: auto;
+  text-align: center;
+}
+
+h5 {
+  font-size: $font-medium; 
+  color: aliceblue;
+  background-color: #135e5e;
+  border: 0;
+  padding: 5px;
+  margin: 5px;
+  display: block;
+  height: auto;
+  text-align: center;
+  border-radius: $borderRadius;
+  box-shadow: $box-shadow;
+}
+
+.profile-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;  
+  border: 5px;
+  padding: 5px;
+  margin: 5px;
+}
+
+
+.each-profile {
+  justify-content: center;
+  border: 0px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 2px;
+  background-color: #848a8f;
+  border-radius: $borderRadius;
+  box-shadow: $box-shadow;
+}
+
+
+ .profile-picture {
+  text-align: center;
+  border: 0px;
+  padding: 5px;
+  margin: 5px;
+  background-color: #d1dce7;
+  border-radius: $borderRadius;
+  box-shadow: $box-shadow;
+img {
+  /* display: flex; */
+  align-items: center;
+  justify-content: space-around;
+  background-color: #bba1b7;
+  width: 200px;
+  border: 0px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: $borderRadius;
+}
+ }
+
+ .profile-name-plate {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  margin: 5px;
+}
+
+ .profile-name {
+  font-size: $font-small; 
+  padding: 5px;
+
+}
+
+ .profile-sign {
+  font-style: italic;
+  font-size: $font-small; 
+  padding: 5px;
 }
